# shorturl

./: .env  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
src/: app.rs  database.rs  error.rs  lib.rs  shorturl.rs
