[package]
name = "shorturl"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["macros"] }
base-62 = "0.1.1"
log = "0.4.22"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.205", features = ["derive"] }
sha1 = "0.10.6"
tokio = { version = "1.39.2", features = ["full"] }
toml = "0.8.19"
url = { version = "2.5.2", features = ["serde"] }
